--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-    Title="Register" Height="450" Width="800"
-        Background="Black">
+    Title="Register" Height="800" Width="800"
+        Background="green" Foreground="black">
     <StackPanel Grid.Column="1" HorizontalAlignment="Right" Width="300">
-        <TextBlock HorizontalAlignment="Center" Foreground="White" FontSize="30" Margin="0 5">Sign Up Form</TextBlock>
+
+        <TextBlock HorizontalAlignment="Center"  FontSize="30" Margin="0 5">Sign Up Form</TextBlock>
         <StackPanel>
             <Border BorderBrush="White" BorderThickness="2" Margin="0 5" CornerRadius="8,8,8,8">
                 <Label>
@@ -48,6 +49,19 @@
                 <TextBox  Background="Transparent"  Foreground="Black" ></TextBox>
             </Border>
         </StackPanel>
+        <StackPanel>
+            <Border BorderBrush="White" BorderThickness="2" Margin="0 5" CornerRadius="8,8,8,8">
+                <Label>
+                    <StackPanel Orientation="Horizontal">
+
+                        <AccessText Text="Age :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" Foreground="White"></AccessText>
+                    </StackPanel>
+                </Label>
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" Background="WhiteSmoke">
+                <TextBox  Background="Transparent"  Foreground="Black" ></TextBox>
+            </Border>
+        </StackPanel>
         <StackPanel Margin="0 10">
             <Border BorderBrush="White" BorderThickness="2" Margin="0 5">
                 <Label>
@@ -60,6 +74,12 @@
             <Border BorderBrush="Black" BorderThickness="1" Background="WhiteSmoke">
                 <PasswordBox  Background="Transparent"  Foreground="Black" ></PasswordBox>
             </Border>
+        </StackPanel>
+
+        <StackPanel Margin="10" >
+            <Label FontWeight="Bold">Gender</Label>
+            <RadioButton>male</RadioButton>
+            <RadioButton>female</RadioButton>
         </StackPanel>
         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
             <Button Width="100" Height="25" Margin="10 0" Background="Green" Foreground="White">Register</Button>
