--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-    Title="Register" Height="800" Width="800"
+    Title="Register" Height="800" Width="800"  Icon="images/logo.ico" 
         Background="green" Foreground="black">
     <StackPanel Grid.Column="1" HorizontalAlignment="Right" Width="300">
 
