--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Register" Height="1050" Width="1400"
-         Icon="images/logo.ico"
+    Title="Register" Height="1050" Width="1400"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -28,7 +27,7 @@
                     <RowDefinition Height="4*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0" Margin="0,0,-0.2,735.8" Grid.RowSpan="2">
+                <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
@@ -39,19 +38,19 @@
                     </Grid.RowDefinitions>
                     <Image Source="images/left logo.png" Grid.RowSpan="2"></Image>
 
-                    <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome!</Bold></TextBlock>
-                    <TextBlock FontSize="18"  Grid.Column="1" Grid.Row="2"> <Bold>Register and join our family!</Bold></TextBlock>
+                    <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome Back!</Bold></TextBlock>
+                    <TextBlock FontSize="30"  Grid.Column="1" Grid.Row="2"> <Bold>Please Register</Bold></TextBlock>
 
 
                 </Grid>
-                <StackPanel Grid.Row="1" Margin="0,59,-0.2,0">
+                <StackPanel Grid.Row="1" Margin="0 30">
                     <StackPanel Width="500">
                         <StackPanel>
                             <Label Margin="0 10">
                                 <AccessText FontWeight="Bold" Text="UserName :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
-                                <TextBox  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
+                                <TextBox Name="usernamewpf" Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
                             </Border>
                         </StackPanel>
 
@@ -60,20 +59,20 @@
                                 <AccessText FontWeight="Bold" Text="Phone :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
-                                <TextBox  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
+                                <TextBox Name="phonewpf" Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
                             </Border>
                         </StackPanel>
 
                         <StackPanel>
-                            <Label Margin="0 0">
+                            <Label Margin="0 10">
                                 <AccessText FontWeight="Bold" Text="Email address :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
-                                <TextBox  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
+                                <TextBox Name="emailwpf"  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
                             </Border>
                         </StackPanel>
 
-                        <StackPanel Margin="0 0">
+                        <StackPanel Margin="0 10">
 
                             <Label Margin="0 20" >
 
@@ -83,11 +82,11 @@
                             </Label>
 
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"    >
-                                <PasswordBox  Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
+                                <PasswordBox  Name="passwordwpf"  Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
                             </Border>
                         </StackPanel>
 
-                        <StackPanel Margin="0 0">
+                        <StackPanel Margin="0 10">
 
                             <Label Margin="0 20" >
 
@@ -97,28 +96,30 @@
                             </Label>
 
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"    >
-                                <PasswordBox  Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
+                                <PasswordBox  Name="wpf" Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
                             </Border>
                         </StackPanel>
 
                         <StackPanel>
-                            <Label Margin="0 0">
+                            <Label Margin="0 10">
                                 <AccessText FontWeight="Bold" Text="Age :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
-                                <TextBox  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
+                                <TextBox Name="agewpf" Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
                             </Border>
                         </StackPanel>
 
-                        <StackPanel Margin="0 0" >
+                        <StackPanel Margin="0 10" >
                             <Label FontWeight="Bold" FontSize="20">Gender</Label>
-                            <RadioButton>male</RadioButton>
-                            <RadioButton>female</RadioButton>
+                            <RadioButton Name="male">male</RadioButton>
+                            <RadioButton Name="female">female</RadioButton>
                         </StackPanel>
+
+
                         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 20">
 
                             <Border Width="300" Height="50" BorderThickness="1" Background=" #8469f4" BorderBrush="#8469f4" CornerRadius="12,12,12,12" >
-                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30">
+                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30" Click="Button_Click">
                                     Register
                                 </Button>
                             </Border>
@@ -128,7 +129,6 @@
                 </StackPanel>
 
             </Grid>
-            
         </StackPanel>
     </Grid>
 </Window>
