--- a/WpfApp2/WpfApp2/Welcome.xaml
+++ b/WpfApp2/WpfApp2/Welcome.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Welcome" Height="768" Width="1366"  
-        Icon="images/logo.ico" >
+        Title="Welcome" Height="1050" Width="1400"  >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -50,13 +49,13 @@
                             <Label Margin="0 20">
 
 
-                                <AccessText FontWeight="Bold" Text="UserName :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
+                                <AccessText FontWeight="Bold" Text="Email :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
 
 
                             </Label>
 
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
-                                <TextBox  Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
+                                <TextBox Name="Emailwpf" Background="Transparent"  Foreground="Black"  BorderThickness="0" ></TextBox>
                             </Border>
                         </StackPanel>
                         <StackPanel Margin="0 10">
@@ -69,13 +68,13 @@
                             </Label>
 
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"    >
-                                <PasswordBox  Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
+                                <PasswordBox Name="passwordwpf" Background="Transparent"  BorderThickness="0" Foreground="Black" ></PasswordBox>
                             </Border>
                         </StackPanel>
                         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 70 0 20">
 
                             <Border Width="300" Height="50" BorderThickness="1" Background=" #8469f4" BorderBrush="#8469f4" CornerRadius="12,12,12,12" >
-                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30">
+                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30" Click="Button_Click">
 
                                     Login
                                 </Button>
@@ -85,7 +84,8 @@
                         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 30">
 
                             <Border Width="300" Height="50" BorderThickness="1" Background=" #8469f4" BorderBrush="#8469f4" CornerRadius="12,12,12,12" >
-                                <Button Content="Register" Click="Button_Click" FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30">
+                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30" Click="Button_Click_1">
+                                    Register
                                 </Button>
                             </Border>
 
