--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -40,10 +40,8 @@
 
                     <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome Back!</Bold></TextBlock>
                     <TextBlock FontSize="30"  Grid.Column="1" Grid.Row="2"> <Bold>Please Register</Bold></TextBlock>
-
-
                 </Grid>
-                <StackPanel Grid.Row="1" Margin="0 30">
+                <StackPanel Grid.Row="1" Margin="0,0,-0.2,5.8">
                     <StackPanel Width="500">
                         <StackPanel>
                             <Label Margin="0 10">
@@ -55,7 +53,7 @@
                         </StackPanel>
 
                         <StackPanel>
-                            <Label Margin="0 10">
+                            <Label>
                                 <AccessText FontWeight="Bold" Text="Phone :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
@@ -72,7 +70,7 @@
                             </Border>
                         </StackPanel>
 
-                        <StackPanel Margin="0 10">
+                        <StackPanel>
 
                             <Label Margin="0 20" >
 
@@ -86,7 +84,7 @@
                             </Border>
                         </StackPanel>
 
-                        <StackPanel Margin="0 10">
+                        <StackPanel>
 
                             <Label Margin="0 20" >
 
@@ -101,7 +99,7 @@
                         </StackPanel>
 
                         <StackPanel>
-                            <Label Margin="0 10">
+                            <Label>
                                 <AccessText FontWeight="Bold" Text="Age :" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="20" ></AccessText>
                             </Label>
                             <Border BorderBrush="Black" BorderThickness="0,0,0,3"   >
