--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp2.Register"
+﻿<Page x:Class="WpfApp2.Register"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,6 +18,10 @@
                 <StackPanel>
                     <Image Source="images/logo.png" ></Image>
                 </StackPanel>
+                <Button Style="{StaticResource MyButton}" Margin="10,0,632.8,301" Background="Transparent" BorderThickness="0" Click="back_welcome">
+                    <Image Source="images/back.png" />
+                </Button>
+
             </Grid>
         </StackPanel>
         <StackPanel Grid.Column="1">
@@ -38,8 +42,8 @@
                     </Grid.RowDefinitions>
                     <Image Source="images/left logo.png" Grid.RowSpan="2"></Image>
 
-                    <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome Back!</Bold></TextBlock>
-                    <TextBlock FontSize="30"  Grid.Column="1" Grid.Row="2"> <Bold>Please Register</Bold></TextBlock>
+                    <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome!</Bold></TextBlock>
+                    <TextBlock FontSize="20"  Grid.Column="1" Grid.Row="2"> <Bold>Register to join our family</Bold></TextBlock>
                 </Grid>
                 <StackPanel Grid.Row="1" Margin="0,0,-0.2,5.8">
                     <StackPanel Width="500">
@@ -117,7 +121,7 @@
                         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 20">
 
                             <Border Width="300" Height="50" BorderThickness="1" Background=" #8469f4" BorderBrush="#8469f4" CornerRadius="12,12,12,12" >
-                                <Button FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30" Click="Button_Click">
+                                <Button Style="{StaticResource MyButton}" FontWeight="Bold" Margin="10 0" Background=" #8469f4" Foreground="White" FontSize="30" Click="Button_Click">
                                     Register
                                 </Button>
                             </Border>
@@ -129,4 +133,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</Window>
+</Page>
