--- a/WpfApp2/WpfApp2/Register.xaml
+++ b/WpfApp2/WpfApp2/Register.xaml
@@ -45,7 +45,7 @@
                     <TextBlock FontSize="30"  VerticalAlignment="Bottom" Grid.Column="1"><Bold> Welcome!</Bold></TextBlock>
                     <TextBlock FontSize="20"  Grid.Column="1" Grid.Row="2"> <Bold>Register to join our family</Bold></TextBlock>
                 </Grid>
-                <StackPanel Margin="-10,10,10,193" Grid.RowSpan="2">
+                <StackPanel Margin="-10,10,10,193" Grid.RowSpan="2" Grid.Row="1">
                     <StackPanel Width="500">
                         <StackPanel>
                             <Label Margin="0 10">
