--- a/WpfApp2/WpfApp2/mails.xaml
+++ b/WpfApp2/WpfApp2/mails.xaml
@@ -9,7 +9,7 @@
       Title="mails">
 
     <Grid>
-        <DataGrid Name="dg"  Height="320" Margin="150,99,152,0" VerticalAlignment="Top"/>
+        <DataGrid Name="dg"/>
         <TextBlock Name="msgs" HorizontalAlignment="Left" Margin="150,83,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
     </Grid>
