all buttons are working now and every folder has its msgs and the msgs numbers is changed for every folder + now u have to change the string connec to ur connection string so u dont search for the sqlconnection in the code

--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -14,14 +14,14 @@
         <StackPanel Width="auto">
             <Button Click="Button_New">New Message</Button>
             <Button Click="Button_inbox">Inbox</Button>
-            <Button>Spam</Button>
-            <Button>Trash</Button>
+            <Button Click="Button_draft">Drafts</Button>
+            <Button Click="Button_spam">Spam</Button>
             <Button Click="Button_Sent">Sent</Button>
         </StackPanel>
         <DataGrid Name="dg" Grid.Column="1" IsReadOnly="True">
 
         </DataGrid>
-        <TextBlock Name="msgs" HorizontalAlignment="Left" Margin="219,101,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock Name="msgs" HorizontalAlignment="Left" Margin="193,101,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
