--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -11,15 +11,48 @@
             <ColumnDefinition Width="1*"></ColumnDefinition>
             <ColumnDefinition Width="4*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <StackPanel Width="auto">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="11*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <DockPanel Grid.ColumnSpan="2" Margin="10 20">
+            <TextBlock>User name</TextBlock>
+            <Button Height="30" Width="100" VerticalAlignment="Top" Click="Button_logOut"> Log Out</Button>
+        </DockPanel>
+        <StackPanel Width="auto" Grid.Row="1">
             <Button Click="Button_New">New Message</Button>
             <Button Click="Button_inbox">Inbox</Button>
             <Button Click="Button_draft">Drafts</Button>
             <Button Click="Button_spam">Spam</Button>
             <Button Click="Button_Sent">Sent</Button>
         </StackPanel>
-        <DataGrid Name="dg" Grid.Column="1" IsReadOnly="True">
-
+        <DataGrid Name="dg" Grid.Column="1" Grid.Row="1" ColumnWidth="150"  CanUserResizeColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                
+            </DataGrid.Columns>
+            <DataGrid.RowDetailsTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"></RowDefinition>
+                                <RowDefinition Height="auto"></RowDefinition>
+                                <RowDefinition Height="auto"></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="From : " FontWeight="Bold" ></TextBlock>
+                            <TextBlock Text="{Binding Username }" Grid.Column="1" Grid.Row="0" ></TextBlock>
+                            <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
+                            <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="1" ></TextBlock>
+                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" ></TextBlock>
+                            <TextBlock Text="{Binding msgdate }" Grid.Column="1" Grid.Row="2" ></TextBlock>
+                        </Grid>
+                    </DockPanel>
+                </DataTemplate>
+            </DataGrid.RowDetailsTemplate>
         </DataGrid>
         <TextBlock Name="msgs" HorizontalAlignment="Left" Margin="193,101,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
 
