--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -22,7 +22,7 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock Name="usernamewpf" Text="Welcome back , "></TextBlock>
-            <Button Grid.Row="1"  Height="30" Width="100" HorizontalAlignment="Left" Click="Button_update" >Update Info</Button>
+            <Button Grid.Row="1"  Height="30" Width="100" HorizontalAlignment="Left" Click="Button_update" >Personal Info</Button>
             <Button Height="30" Width="100" HorizontalAlignment="Right" Click="Button_logOut" Grid.RowSpan="2">Log Out</Button>
         </Grid>
         <StackPanel Width="auto" Grid.Row="1">
