--- a/WpfApp2/WpfApp2/sendTo.xaml
+++ b/WpfApp2/WpfApp2/sendTo.xaml
@@ -20,9 +20,11 @@
         </StackPanel>
         <TextBox Name="descwpf" AcceptsReturn="True" TextWrapping="Wrap" Height="250"/>
         <StackPanel Orientation="Horizontal">
-            
-            <Button HorizontalAlignment="Left" Margin="30 10" Width="100" Click="Button_sendmsg">Send</Button>
-            <Button HorizontalAlignment="Right" Margin="120 10 0 10" Width="100" Click="Button_discard">Draft it </Button>
+
+            <Button Name="send" HorizontalAlignment="Left" Margin="30 10" Width="100" Click="Button_sendmsg">Send</Button>
+            <Button x:Name="senddraft" HorizontalAlignment="Right" Margin="0 10 0 10" Width="100" Click="Button_senddraft" Content="Send"/>
+            <Button x:Name="draft" HorizontalAlignment="Right" Margin="50 10 0 10" Width="100" Click="Button_discard" Content="Draft it"/>
+
         </StackPanel>
     </StackPanel>
 </Window>
