--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
-        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="MailsHome" Height="1050" Width="1400">
     <Grid>
@@ -28,7 +28,7 @@
             <StackPanel
   Orientation="Horizontal">
                 <Expander
-    ExpandDirection="Left">
+    ExpandDirection="Left" Width="275">
                     <Expander.Header>
                         <TextBlock
       
@@ -49,8 +49,8 @@
                         <Button Click="Button_New" Margin="0 7">New Message</Button>
                         <Button Click="Button_inbox " Margin="0 7">Inbox</Button>
                         <Button Click="Button_Sent" Content="Sent" Margin="0 7"/>
-                        <Button Click="Button_draft" Margin="0 7">Drafts</Button>
                         <Button Click="Button_spam" Margin="0 7">Spam</Button>
+                        <Button Click="Button_draft" Margin="0 7">Drafts</Button>
                         <Button Name="contmsg" Margin="0 7" Click="Button_cont" Content="Send the draft"/>
                        
                     </StackPanel>
@@ -59,8 +59,12 @@
             </StackPanel>
            
         </StackPanel>
+        
         <DataGrid Name="dg"  SelectedItem="{Binding MsgID}" Grid.Column="1" Grid.Row="1" ColumnWidth="150"  CanUserResizeColumns="False" IsReadOnly="True" AutoGenerateColumns="False">
-            <DataGrid.Columns>
+            
+            
+            
+         <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding username}" Header="From"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding username}" Header="To"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Subject}" Header="Subject"></DataGridTextColumn>
@@ -72,51 +76,68 @@
             </DataGrid.Columns>
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
-                    <DockPanel>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto"></ColumnDefinition>
-                                <ColumnDefinition Width="auto"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto"></RowDefinition>
-                                <RowDefinition Height="auto"></RowDefinition>
-                                <RowDefinition Height="auto"></RowDefinition>
-                                <RowDefinition Height="auto"></RowDefinition>
+                    <materialDesign:Card
+            Background="{DynamicResource MaterialDesignBackground}">
+                        <StackPanel>
+                            <Expander
+      HorizontalAlignment="Stretch"
+      Header="Description">
+                                <StackPanel
+        Orientation="Vertical"
+        TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
+        Margin="24,8,24,16">
+                                    <DockPanel>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                <ColumnDefinition Width="auto"></ColumnDefinition>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="auto"></RowDefinition>
+                                                <RowDefinition Height="auto"></RowDefinition>
+                                                <RowDefinition Height="auto"></RowDefinition>
+                                                <RowDefinition Height="auto"></RowDefinition>
 
-                                <RowDefinition Height="35"></RowDefinition>
-                                <RowDefinition Height="auto"></RowDefinition>
-                                <RowDefinition Height="6"></RowDefinition>
-
-
-
-                            </Grid.RowDefinitions>
-                            <TextBlock Text="Username : " FontWeight="Bold" Grid.Column="0" Grid.Row="0" ></TextBlock>
-                            <TextBlock Text="{Binding username }" Grid.Column="1" Grid.Row="0" ></TextBlock>
-
-                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
-                            <TextBlock Text="{Binding FromEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
-
-                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
-                            <TextBlock Text="{Binding ToEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
-
-                            <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" ></TextBlock>
-                            <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="2" ></TextBlock>
-
-                            <TextBlock Text="Description : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" ></TextBlock>
-                            <TextBlock Text="{Binding Description }" Grid.Column="1" Grid.Row="3" ></TextBlock>
-
-                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="4" ></TextBlock>
-                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="4" ></TextBlock>
-                            <Button Name="deletemsg" Click="Button_Delete"  Grid.Column="1" Grid.Row="5">Delete</Button>
-
-                            <TextBlock  Text="" FontWeight="Bold" Grid.Column="0" Grid.Row="6" ></TextBlock>
+                                                <RowDefinition Height="35"></RowDefinition>
+                                                <RowDefinition Height="auto"></RowDefinition>
+                                                <RowDefinition Height="6"></RowDefinition>
 
 
-                        </Grid>
-                    </DockPanel>
+
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Text="Username : " FontWeight="Bold" Grid.Column="0" Grid.Row="0" ></TextBlock>
+                                            <TextBlock Text="{Binding username }" Grid.Column="1" Grid.Row="0" ></TextBlock>
+
+                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
+                                            <TextBlock Text="{Binding FromEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
+
+                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
+                                            <TextBlock Text="{Binding ToEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
+
+                                            <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" ></TextBlock>
+                                            <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="2" ></TextBlock>
+
+                                            <TextBlock Text="Description : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" ></TextBlock>
+                                            <TextBlock Text="{Binding Description }" Grid.Column="1" Grid.Row="3" ></TextBlock>
+
+                                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="4" ></TextBlock>
+                                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="4" ></TextBlock>
+                                            <Button Name="deletemsg" Click="Button_Delete"  Grid.Column="1" Grid.Row="5">Delete</Button>
+
+                                            <TextBlock  Text="" FontWeight="Bold" Grid.Column="0" Grid.Row="6" ></TextBlock>
+
+
+                                        </Grid>
+                                    </DockPanel>
+                                </StackPanel>
+                            </Expander>
+
+
+                        </StackPanel>
+</materialDesign:Card>
+                    
                 </DataTemplate>
-            </DataGrid.RowDetailsTemplate>
+            </DataGrid.RowDetailsTemplate> 
         </DataGrid>
         <TextBlock Name="msgs" HorizontalAlignment="Left" Margin="178,600,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Grid.Row="1" Height="38" Width="90" />
 
