--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -123,9 +123,10 @@
 
                                             <TextBlock Text="{Binding Description }"  Grid.ColumnSpan="2" Grid.Row="4" TextWrapping="Wrap" Width="700"></TextBlock>
 
-                                            <Button Name="deletemsg" Click="Button_Delete"  Grid.Column="1" Grid.Row="5">Delete</Button>
+                                            <Button Name="deletemsg" Click="Button_Delete" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="5">Delete</Button>
+                                            <Button Click="Button_Reply" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="5">Reply</Button>
 
-                                            <TextBlock  Text="" FontWeight="Bold" Grid.Column="0" Grid.Row="6" ></TextBlock>
+                                            
 
 
                                         </Grid>
